HelloUltraviolet/Fixtures/RejectedSource/Names/DuplicateModuleDeclaration/Source/Main.uv
//! Rejected name-resolution specimen for duplicate module-scope declarations.

public procedure duplicateDeclarationReference() -> i32 {
    return 1
}

public procedure duplicateDeclarationReference() -> i32 {
    return 2
}
